Fix spacings

--- a/src/split-panel/styles.scss
+++ b/src/split-panel/styles.scss
@@ -240,15 +240,20 @@ $app-layout-drawer-width: calc(#{awsui.$space-layout-toggle-diameter} + 2 * #{aw
     margin-block: constants.$toolbar-vertical-panel-icon-offset;
   }
 
-  &-slots {
-    min-block-size: calc(#{awsui.$space-scaled-xxl} + #{awsui.$space-scaled-xxs} + 1px);
+  &-content,
+  &-start,
+  &-text-and-info {
+    flex-grow: 1;
   }
 
-  &-slots,
+  &-main-row {
+    margin-block-start: calc(#{awsui.$space-scaled-xxs} + 1px);
+  }
+
+  &-main-row,
   &-start,
   &-text-and-info {
     display: flex;
-    flex-grow: 1;
     flex-wrap: wrap;
     column-gap: awsui.$space-scaled-xs;
     row-gap: awsui.$space-scaled-xxs;
@@ -268,6 +273,13 @@ $app-layout-drawer-width: calc(#{awsui.$space-layout-toggle-diameter} + 2 * #{aw
     padding-inline: 0;
     margin-block: 0;
     margin-inline: 0;
+  }
+
+  &-description {
+    color: awsui.$color-text-heading-secondary;
+    @include styles.font-body-m;
+    margin-block-start: awsui.$space-scaled-xxs;
+    margin-block-end: 0;
   }
 }
 
